fixing integ tests for spark-core